--- a/stylesheets/material.css
+++ b/stylesheets/material.css
@@ -6,23 +6,25 @@ color scheme primary: #DA2E75
 */
 
 html>body {
-    font-family: 'Roboto','Helvetica','Arial',sans-serif!important;
+    /*font-family: 'Roboto','Helvetica','Arial',sans-serif!important;*/
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
     background-color: #FAFAFA;
 }
 
 .mdl-textfield__input {
-    font-family: 'Roboto','Helvetica','Arial',sans-serif!important;
+    /*font-family: 'Roboto','Helvetica','Arial',sans-serif!important;*/
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
 
 /*
 Rules for sizing the icon.
 http://google.github.io/material-design-icons/
 */
-.material-icons.md-text { font-size: 90%; }
-.material-icons.md-18 { font-size: 18px; }
-.material-icons.md-24 { font-size: 24px; }
-.material-icons.md-36 { font-size: 36px; }
-.material-icons.md-48 { font-size: 48px; }
+.material-icons.md-text { font-size: 90%;  }
+.material-icons.md-18   { font-size: 18px; }
+.material-icons.md-24   { font-size: 24px; }
+.material-icons.md-36   { font-size: 36px; }
+.material-icons.md-48   { font-size: 48px; }
 
 /* Rules for using icons as black on a light background. */
 .material-icons.md-dark { color: rgba(0, 0, 0, 0.54); }
