--- a/stylesheets/material.css
+++ b/stylesheets/material.css
@@ -86,20 +86,6 @@ http://google.github.io/material-design-icons/
   color: #fff;
 }
 
-.flex-flow-row-wrap { flex-flow: row wrap; }
-
-.max-width { width: 100% !important; }
-
-.bg-cover {
-    background-color: #f9f9f9;
-    background-position: center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
-.bg-cover-transparent { background-color: transparent; }
-
 /*
 Twitter Emoji
 */
@@ -119,12 +105,6 @@ Bootstrap elements
 .pull-right {
     float: right !important;
 }
-
-/*
-Custom
-*/
-dialog::backdrop { opacity: .75; background: #333 url(../images/overlays.png); }
-
 
 /**
  * Handling Long Words and URLs (Forcing Breaks, Hyphenation, Ellipsis, etc)
@@ -182,4 +162,38 @@ dialog::backdrop { opacity: .75; background: #333 url(../images/overlays.png); }
     white-space: -pre-wrap;      /* Opera 4-6 */
     white-space: -o-pre-wrap;    /* Opera 7 */
     word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
+
+
+/**
+ * Custom
+ */
+dialog::backdrop { opacity: .75; background: #333 url(../images/overlays.png); }
+
+.flex-flow-row-wrap { flex-flow: row wrap; }
+
+.max-width { width: 100% !important; }
+
+.bg-cover {
+    background-color: #f9f9f9;
+    background-position: center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+.bg-cover-transparent { background-color: transparent; }
+
+/*.demo-card-event {
+    background: url(images/example-blog05.jpg) center / cover;
+}
+*/
+.demo-card-event > .mdl-card__actions {
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    box-sizing: border-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
 }
