--- a/stylesheets/mdl.css
+++ b/stylesheets/mdl.css
@@ -170,7 +170,7 @@ dialog::backdrop { opacity: .75; background: #333 url(../images/overlays.png); }
 .flex-flow-row-wrap { flex-flow: row wrap; }
 
 .full-width { width: 100% !important; }
-.img-fluid  { max-width: 100%; display: block; }
+.img-fluid  { max-width: 100%; }
 
 .bg-cover {
     background-color: #f9f9f9;
