--- a/stylesheets/mdl.css
+++ b/stylesheets/mdl.css
@@ -74,9 +74,14 @@ img.emoji {
 /*
 Bootstrap elements
 */
-.pull-left      { float:  left    !important; }
-.pull-right     { float: right    !important; }
-.center-block   { display: block; margin-left: auto; margin-right: auto; }
+.pull-left  { float:  left !important; }
+.pull-right { float: right !important; }
+
+.center-block {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 /**
  * Handling Long Words and URLs (Forcing Breaks, Hyphenation, Ellipsis, etc)
