--- a/stylesheets/mdl.css
+++ b/stylesheets/mdl.css
@@ -9,7 +9,10 @@ color scheme primary: #DA2E75
 html>body, .mdl-textfield__input {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
-html>body { background-color: #FFFFFF; }
+
+.mdl-card__media {
+    background-color: transparent;
+}
 
 /*
 Rules for sizing the icon.
