--- a/stylesheets/mdl.css
+++ b/stylesheets/mdl.css
@@ -156,7 +156,7 @@ dialog::backdrop { opacity: .75; background: #333 url(../images/overlays.png); }
 .img-fluid  { max-width: 100%; }
 
 .bg-cover {
-    background-color: #f9f9f9;
+    background-color: transparent;
     background-position: center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
