--- a/stylesheets/material.css
+++ b/stylesheets/material.css
@@ -84,11 +84,15 @@ demo-layout--fixed-drawer
     padding-right: 0;
 }
 
-.demo-layout-dashboard .mdl-layout__header-row {
+.demo-layout-dashboard .mdl-layout__header-row,
+.demo-layout-user .mdl-layout__header-row,
+.demo-layout-about .mdl-layout__header-row {
     padding-left: 40px;
 }
 
-.demo-layout-dashboard.is-small-screen .mdl-layout__header-row {
+.demo-layout-dashboard.is-small-screen .mdl-layout__header-row,
+.demo-layout-user.is-small-screen .mdl-layout__header-row,
+.demo-layout-about.is-small-screen .mdl-layout__header-row {
     padding-left: 16px;
 }
 
