--- a/stylesheets/material.css
+++ b/stylesheets/material.css
@@ -86,12 +86,14 @@ demo-layout--fixed-drawer
 
 .demo-layout-dashboard .mdl-layout__header-row,
 .demo-layout-user .mdl-layout__header-row,
+.demo-layout-start .mdl-layout__header-row,
 .demo-layout-about .mdl-layout__header-row {
     padding-left: 40px;
 }
 
 .demo-layout-dashboard.is-small-screen .mdl-layout__header-row,
 .demo-layout-user.is-small-screen .mdl-layout__header-row,
+.demo-layout-start.is-small-screen .mdl-layout__header-row,
 .demo-layout-about.is-small-screen .mdl-layout__header-row {
     padding-left: 16px;
 }
@@ -100,7 +102,8 @@ demo-layout--fixed-drawer
     /*background: url('../third-party/getmdl.io/transparent.jpg') center / cover;*/
     background: url('../third-party/toptal.com-subtlepatterns/struckaxiom.png');
 }
-.demo-layout-auth .mdl-grid, .demo-layout-start .mdl-grid, .demo-layout-intro .mdl-grid {
+.demo-layout-auth .mdl-grid,
+.demo-layout-intro .mdl-grid {
     max-width: 1080px;
     margin-top: 2.5%;
 }
